--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,84 +12,62 @@ body {
 
 .container {
   position: relative;
-  width: 1200px;
-  margin: auto;
+  width: 1920px;
 }
 
 #quiz-area {
-  width: 600px;
-  font-family: 'Helvetica', sans-serif;
-  font-size: 30px;
+  width: 800px;
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-size: 48px;
+  line-height: 20px;
   padding-left: 45px;
-  padding-top: 20px;
+  padding-top: 40px;
 
-}
-#timer {
-  /* position: relative;
-  top: 5%; */
-  font-family: 'Six Caps', sans-serif;
-  font-size: 40px;
-  margin-right: 50px;
 }
 
 #wins {
-  /* position: relative;
-  top: 5%; */
   font-family: 'Six Caps', sans-serif;
   font-size: 40px;
 }
 
 #answer-button {
   display: inline-block;
-  height: 70px;
+  height: 120px;
   width: 45%;
   background-color: white;
   margin: 10px;
   padding: 0px;
-  font-family: serif;
-  color: black;
-  font-size: 50px;
-
+  font-family: 'Anton', sans-serif;
+  color: #888;
+  font-size: 70px;
 }
 
 #losses {
-  /* position: relative;
-  top: 5%; */
   font-family: 'Six Caps', sans-serif;
   font-size: 40px;
-
 }
 
 div.absolute {
     position: absolute;
-
-    right: 12px;
-    top: 52px;
-    width: 648px;
-    height: 297px;
-    /* background-color: blue; */
-    /* height 50px; */
-    /* background-color:  */
-    /* top: 10%; */
+    right: 240px;
+    top: 65px;
+    width: 870px;
+    height: 380px;
     font-size: 42px;
     color: white;
 }
 
 div.absolute2 {
   position: absolute;
-  right: 12px;
-  top: 348px;
-  width: 580px;
-  height: 70px;
-  /* background-color: blue; */
-  /* height 50px; */
-  /* background-color:  */
-  /* top: 10%; */
-  font-size: 30px;
+  right: 205px;
+  top: 430px;
+  width: 870px;
+  height: 95px;
+  font-size: 40px;
   color: white;
   margin-right: 35px;
+  font-family: 'Open Sans Condensed', sans-serif;
 }
-
 
 button {
   display: inline-block;
@@ -97,67 +75,42 @@ button {
   height: 20%;
   margin: 0 auto;
   font-size: 42px;
-  /* cursor: pointer; */
-  background: transparent;
   border: 0;
 }
 
 #playAgain {
   width: 50%;
-  /* height: 20%; */
   margin: 0 auto;
   font-size: 24px;
-  /* cursor: pointer; */
   background: white;
   color: black;
   border: 0;
 }
 
 #title {
-  /* font-family: 'Six Caps', sans-serif; */
   font-family: 'Baloo Paaji', cursive;
   font-size: 120px;
   color: white;
 }
 
-img {
-  width: 1200px;
-  float: left;
-}
-
-h1 {
+/* h1 {
   padding-top: 2.5%;
-  /* font-family: Geo, sans-serif; */
   font-size: 48px;
   font-weight: bold;
   color: black;
-}
-
-h2 {
-  margin-bottom: 25px;
-  font-size: 35px;
-}
-
-h3 {
-  margin-bottom: 10px;
-  font-size: 25px;
-}
+} */
 
 #start {
-  margin-top: 22%;
+  margin-top: 20%;
   font-size: 50px;
   color: black;
   background-color: white;
   width: 210px;
   margin-right: 0px;
   text-transform: uppercase;
-  /* background: red; */
-  /* border: 2px solid black; */
-  /* width: 200px; */
 }
 
 button:hover {
-  /* background: pink; */
   color: lightblue;
 }
 
