--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,17 +23,14 @@ body {
   padding-left: 45px;
   padding-top: 20px;
 }
+
 #timer {
-  /* position: relative;
-  top: 5%; */
   font-family: 'Six Caps', sans-serif;
   font-size: 4px;
   margin-right: 50px;
 }
 
 #wins {
-  /* position: relative;
-  top: 5%; */
   font-family: 'Six Caps', sans-serif;
   font-size: 24px;
 }
@@ -53,11 +50,8 @@ body {
 }
 
 #losses {
-  /* position: relative;
-  top: 5%; */
   font-family: 'Six Caps', sans-serif;
   font-size: 24px;
-
 }
 
 div.absolute {
@@ -67,10 +61,6 @@ div.absolute {
     top: 52px;
     width: 648px;
     height: 297px;
-    /* background-color: blue; */
-    /* height 50px; */
-    /* background-color:  */
-    /* top: 10%; */
     font-size: 4px;
     color: white;
 }
@@ -82,10 +72,6 @@ div.absolute2 {
   top: 348px;
   width: 580px;
   height: 70px;
-  /* background-color: blue; */
-  /* height 50px; */
-  /* background-color:  */
-  /* top: 10%; */
   font-size: 36px;
   color: white;
   margin-right: 35px;
@@ -98,50 +84,29 @@ button {
   height: 20%;
   margin: 0 auto;
   font-size: 42px;
-  /* cursor: pointer; */
   background: transparent;
   border: 0;
 }
 
 #playAgain {
   width: 50%;
-  /* height: 20%; */
   margin: 0 auto;
   font-size: 24px;
-  /* cursor: pointer; */
   background: white;
   color: black;
   border: 0;
 }
 
 #title {
-  /* font-family: 'Six Caps', sans-serif; */
   font-family: 'Baloo Paaji', cursive;
   font-size: 120px;
   color: white;
+  white-space: nowrap;
 }
 
 img {
   width: 1200px;
   float: left;
-}
-
-h1 {
-  padding-top: 2.5%;
-  /* font-family: Geo, sans-serif; */
-  font-size: 8px;
-  font-weight: bold;
-  color: black;
-}
-
-h2 {
-  margin-bottom: 25px;
-  font-size: 8px;
-}
-
-h3 {
-  margin-bottom: 10px;
-  font-size: 25px;
 }
 
 #start {
@@ -152,16 +117,38 @@ h3 {
   width: 210px;
   margin-right: 0px;
   text-transform: uppercase;
-  /* background: red; */
-  /* border: 2px solid black; */
-  /* width: 200px; */
 }
 
 button:hover {
-  /* background: pink; */
   color: lightblue;
 }
 
 #answer-button:hover {
   background-color: lightblue;
+}
+
+@media screen and (max-width: 1199px) {
+
+  div.absolute {
+  right: 0px;
+  left: 500px;
+  }
+
+}
+
+@media screen and (max-width: 799px) {
+
+  div.absolute {
+  right: 0px;
+  left: 500px;
+  }
+
+}
+
+@media screen and (max-width: 468px) {
+
+  div.absolute {
+  right: -400px;
+  }
+
 }
