--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,17 +24,6 @@ body {
   padding-top: 20px;
 }
 
-#timer {
-  font-family: 'Six Caps', sans-serif;
-  font-size: 4px;
-  margin-right: 50px;
-}
-
-#wins {
-  font-family: 'Six Caps', sans-serif;
-  font-size: 24px;
-}
-
 #answer-button {
   display: inline-block;
   height: 70px;
@@ -46,14 +35,9 @@ body {
   color: #888;
   font-size: 50px;
   font-family: 'Anton', sans-serif;
-
 }
 
-#losses {
-  font-family: 'Six Caps', sans-serif;
-  font-size: 24px;
-}
-
+/* main text container */
 div.absolute {
   position: absolute;
   right: 12px;
@@ -64,7 +48,8 @@ div.absolute {
   color: white;
 }
 
-div.absolute2 {
+/* timer div */
+div.absolute2 { 
   font-family: 'Open Sans Condensed', sans-serif;
   position: absolute;
   right: 12px;
@@ -76,6 +61,7 @@ div.absolute2 {
   margin-right: 35px;
 }
 
+/* start button */
 button {
   display: inline-block;
   width: 20%;
@@ -125,6 +111,8 @@ button:hover {
   background-color: lightblue;
 }
 
+/* media queries */
+
 @media screen and (max-width: 1199px) {
 
   div.absolute {
@@ -144,7 +132,7 @@ button:hover {
   }
 
   #title {
-    left-margin: auto;
+    margin-left: auto;
   }
 
 }
@@ -167,16 +155,17 @@ button:hover {
 
   .container {
     clear: all;
-    margin-left: 0px;
-    padding-left: 0px;
+    margin-left: 0px !important;
+    padding-left: 0px !important;
+    justify-content: left !important;
   }
 
   #quiz-area {
-    padding-left: 0px;
+    padding-left: 0px !important;
   }
 
   #title {
-    left-margin: 5%;
+    margin-left: 5%;
   }
 
 }
@@ -193,12 +182,13 @@ button:hover {
 
   .container {
     clear: all;
-    margin-left: 0px;
-    padding-left: 0px;
+    margin-left: 0px !important;
+    padding-left: 0px !important;
+    justify-content: left !important;
   }
 
   #quiz-area {
-    padding-left: 0px;
+    padding-left: 0px !important;
   }
 
   img {
