--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,12 +16,22 @@ body {
   margin: auto;
 }
 
-#quiz-area {
+.quiz-area {
   width: 600px;
   font-family: 'Open Sans Condensed', sans-serif;
   font-size: 24px;
   padding-left: 45px;
   padding-top: 20px;
+}
+
+#whiteBox {
+  width: 500px;
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-size: 24px;
+  padding-left: 45px;
+  padding-top: 20px;
+  color: black;
+  background-color: white;
 }
 
 #answer-button {
