--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ body {
 
 .quiz-area {
   width: 600px;
-  font-family: 'Open Sans Condensed', sans-serif;
+  font-family: serif;
   font-size: 24px;
   padding-left: 45px;
   padding-top: 20px;
@@ -56,6 +56,7 @@ div.absolute {
   height: 297px;
   font-size: 4px;
   color: white;
+  font-family: 'Open Sans Condensed', sans-serif;
 }
 
 /* timer div */
@@ -89,6 +90,7 @@ button {
   background: white;
   color: black;
   border: 0;
+  font-family: 'Open Sans Condensed', sans-serif;
 }
 
 #title {
@@ -111,6 +113,7 @@ img {
   width: 210px;
   margin-right: 0px;
   text-transform: uppercase;
+  font-family: 'Open Sans Condensed', sans-serif;
 }
 
 button:hover {
